bring slindweb back to life
Add slindweb with a separate package (and one more package for
libslindak0-dev).

Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,13 @@
 AUTOMAKE_OPTIONS=foreign
 SUBDIRS= src
 
-dist_pkgdata_DATA = lua/apt-conf.lua
+dist_pkgdata_DATA = lua/apt-conf.lua lua/html.lua
+pkginclude_HEADERS = \
+	include/conf.h        \
+	include/db.h          \
+	include/lua-helpers.h \
+	include/ov.h          \
+	include/slindak.h
 
 sysconf_DATA = lua/slindak-config.lua
 
