implemented simple locking
This is done to prevent concurrent slindak runs from racing accesses to
overrides.db and lists.

Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,7 @@ cgi_PROGRAMS = slindweb
 
 libslindak_la_SOURCES = \
 	configuration.c\
+	biglock.c      \
 	db.c           \
 	overrides.c    \
 	debfile.c      \
