slindak: add database query functionality
This patch adds several command line arguments and database query
functionality to slindak so that it can be used as a substitution
for libpoolcare (RIP).
Options:
 -q pkgname -- query information about source package <pkgname>;
               this option turns on query mode;
 -a arch    -- specify architecture (e.g. for a query filter);
 -Q format  -- specify output format string for query results,
               modifiers are: %p (pkgname), %v (version),
	       %s (suite), %c (component), %a (architecture).

Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ slindak_SOURCES = \
 	slindak.c      \
 	aptconf.c      \
 	lists.c        \
+	query.c        \
 	messages.c     \
 	package.c      \
 	pool.c
