--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -126,6 +126,8 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DPKGDEB_BIN_PATH = @DPKGDEB_BIN_PATH@
+DPKGSRC_BIN_PATH = @DPKGSRC_BIN_PATH@
 DPKG_BIN_PATH = @DPKG_BIN_PATH@
 ECHO = @ECHO@
 ECHO_C = @ECHO_C@
@@ -268,9 +270,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  src/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  src/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  src/Makefile
+	  $(AUTOMAKE) --foreign  src/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
