move binary_cache functionality to a separate module
binary_cache is a table in overrides.db which is supposed to contain
information on binary packages in a pool. It should be created in case
it doesn't exist in the database (if the database was created by some
previous version of slindak).

Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/Makefile.in
+++ b/Makefile.in
@@ -218,6 +218,7 @@ pkginclude_HEADERS = \
 	include/db.h          \
 	include/lua-helpers.h \
 	include/ov.h          \
+	include/bc.h          \
 	include/slindak.h
 
 sysconf_DATA = lua/slindak-config.lua
